--- a/package.json
+++ b/package.json
@@ -12,3 +12,10 @@
     "cors": "^2.8.5"
   }
 }
+"dependencies": {
+  "express": "^4.18.2",
+  "dotenv": "^16.4.0",
+  "cors": "^2.8.5",
+  "mqtt": "^5.0.0",
+  "axios": "^1.6.2"
+}
