--- a/package.json
+++ b/package.json
@@ -7,15 +7,10 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.0",
-    "cors": "^2.8.5"
+    "express": "^4.18.2",
+    "mqtt": "^5.0.0"
   }
-}
-"dependencies": {
-  "express": "^4.18.2",
-  "dotenv": "^16.4.0",
-  "cors": "^2.8.5",
-  "mqtt": "^5.0.0",
-  "axios": "^1.6.2"
 }
