--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "avisafe-dji-backend",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "axios": "^1.6.2",
+    "axios": "^1.7.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.0",
-    "express": "^4.18.2",
-    "mqtt": "^5.0.0"}
+    "dotenv": "^16.4.5",
+    "express": "^4.19.0"
+  }
 }
