--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "axios": "^1.7.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.0"
+    "express": "^4.19.0",
     "mqtt": "^5.3.0"
   }
 }
